added a new method to get route details by tripId
