# routes/locationRoutes.js
@@ -1,10 +1,11 @@
 import express from 'express';
-import { getAllLocationUpdates, getLocationUpdateById, createLocationUpdate, updateLocationUpdate, deleteLocationUpdate } from '../controllers/locationController.js';
+import { getAllLocationUpdates, getLocationUpdateById, createLocationUpdate, updateLocationUpdate, deleteLocationUpdate, getLocationUpdatesByTripId } from '../controllers/locationController.js';
 import auth from '../middleware/auth.js';
 
 const router = express.Router();
 
 router.get('/', getAllLocationUpdates); 
+router.get('/trip/:tripId', getLocationUpdatesByTripId);
 router.get('/:id', getLocationUpdateById); 
 router.post('/', auth(['admin', 'operator']), createLocationUpdate); 
 router.put('/:id', auth(['admin', 'operator']), updateLocationUpdate); 
